# meson-starter-project

./: .editorconfig  .gitignore  CHANGELOG.md  README.md  changelog.sh  meson.build  meson_options.txt
.github/workflows/: CI.yml  ci.yml
app/: meson.build
app/src/: main.cpp
application/: meson.build
application/src/: main.cpp
horus/: meson.build
horus/include/: horus.h  pch.h
horus/src/: horus.cpp
tests/: meson.build
tests/src/: get_one.cpp
